feat: E-mail view notification

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 BACKEND_URL=http://localhost:3333
 
-# AWS
-AWS_DEFAULT_REGION=us-east-2
-
 # Mail
-MAIL_DRIVER=ses
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USER=
+SMTP_PASSWORD=
