--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "handlebars": "^4.7.6",
+    "iplocation": "7.1.0",
     "nodemailer": "^6.4.17",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
@@ -21,9 +22,9 @@
     "uuidv4": "^6.2.6"
   },
   "devDependencies": {
-    "@types/nodemailer": "^6.4.0",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
+    "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "eslint": "5.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
