--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "src/server.ts",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
+    "start": "pm2-runtime start ecosystem.config.js --env production",
     "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
@@ -16,16 +17,26 @@
     "handlebars": "^4.7.6",
     "iplocation": "7.1.0",
     "nodemailer": "^6.4.17",
+    "pm2": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
     "typescript": "^4.1.3",
     "uuidv4": "^6.2.6"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.12",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.1",
     "eslint": "5.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.1.0",
