--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,9 @@
     "extends": [
         "airbnb-base",
         "plugin:@typescript-eslint/recommended",
-        "prettier/@typescript-eslint",
-        "plugin:prettier/recommended"
+        "prettier",
+        "plugin:prettier/recommended",
+        "prettier/@typescript-eslint"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -16,7 +17,9 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 2018,
-        "sourceType": "module"
+        "sourceType": "module",
+        "project": "packages/*/{src,test}/tsconfig.json",
+        "EXPERIMENTAL_useSourceOfProjectReferenceRedirect": true
     },
     "plugins": [
         "@typescript-eslint",
