--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "backend",
+  "name": "@email-visualization-notifier/backend",
   "version": "1.0.0",
   "main": "src/server.ts",
-  "license": "MIT",
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "start": "pm2-runtime start ecosystem.config.js --env production",
-    "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
     "aws-sdk": "^2.824.0",
@@ -34,15 +33,8 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/nodemailer": "^6.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.1",
-    "eslint": "5.16.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.1"
   }
 }
