--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
         "prettier"
     ],
     "rules": {
+      "class-methods-use-this": "off",
+      "no-useless-constructor": "off",
       "import/extensions": [
         "error",
         "ignorePackages",
