feat: Changing ip location info provider.
Removed dependencies to make a direct call to ipstack api

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
         "<node_internals>/**"
       ],
       "outFiles": [
-        "${workspaceFolder}/backend/**/*.js"
+        "${workspaceFolder}/packages/backend/**/*.js"
       ]
     }
   ]
