--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,12 +8,12 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "celebrate": "^13.0.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "handlebars": "^4.7.6",
-    "iplocation": "7.1.0",
     "nodemailer": "^6.4.17",
     "pm2": "^4.5.1",
     "reflect-metadata": "^0.1.13",
