--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,24 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+#####
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+#####
+
+# dependencies
+/.pnp
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
