--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
     "env": {
+        "browser": true,
         "es6": true,
         "node": true
     },
@@ -8,8 +9,8 @@
         "airbnb-base",
         "plugin:@typescript-eslint/recommended",
         "prettier",
-        "plugin:prettier/recommended",
-        "prettier/@typescript-eslint"
+        "prettier/@typescript-eslint",
+        "plugin:prettier/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -17,12 +18,16 @@
     },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
+        "ecmaFeatures": {
+          "jsx": true
+        },
         "ecmaVersion": 2018,
         "sourceType": "module",
         "project": "packages/*/{src,test}/tsconfig.json",
         "EXPERIMENTAL_useSourceOfProjectReferenceRedirect": true
     },
     "plugins": [
+        "react",
         "react-hooks",
         "@typescript-eslint",
         "prettier"
@@ -57,6 +62,9 @@
     "settings": {
       "import/resolver": {
         "typescript": {}
+      },
+      "react": {
+        "version": "detect"
       }
     }
 }
