--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.1.0",
     "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "2.21.2",
-    "eslint-plugin-jsx-a11y": "6.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "4",
     "lerna": "^3.22.1",
     "prettier": "^2.2.1",
