--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,12 @@
       }
     ],
     "prettier/prettier": "error",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "_"
+      }
+    ],
 
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
