--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,7 +46,7 @@
     ],
     "prettier/prettier": "error",
     "@typescript-eslint/no-unused-vars": [
-      "error",
+      "warn",
       {
         "argsIgnorePattern": "_"
       }
