--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "start": "pm2-runtime start ecosystem.config.js --env production",
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "yarn docker-dev && yarn node-dev",
+    "node-dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+    "docker-dev": "docker-compose up -d"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -16,6 +18,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.19.4",
     "nodemailer": "^6.4.17",
     "pm2": "^4.5.1",
     "reflect-metadata": "^0.1.13",
@@ -33,6 +36,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
+    "@types/ioredis": "^4.19.2",
     "@types/nodemailer": "^6.4.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.1",
