--- a/.gitignore
+++ b/.gitignore
@@ -92,7 +92,7 @@ dist
 .cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
 # https://nextjs.org/blog/next-9-1#public-directory-support
-# public
+public
 
 # vuepress build output
 .vuepress/dist
@@ -138,4 +138,3 @@ dist
 .env.development.local
 .env.test.local
 .env.production.local
-
