--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "4",
-    "lerna": "^3.22.1",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
+  },
+  "resolutions": {
+    "@babel/core": "7.12.17"
   }
 }
